
syntax = "proto3";

package auth;

import "google/api/annotations.proto";
/*
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "examples/sub/message.proto";
import "examples/sub2/message.proto";
import "google/protobuf/timestamp.proto";
*/
message VerifyRequest {
 string Token = 1;
}

message VerifyResponse {
 string UserID = 1;
}

service AuthenticationService {
 rpc VerifyUserToken(VerifyRequest) returns (VerifyResponse){ }
}
